Fix to file tree overflow
git-svn-id: svn://php-wax.com/svn/plugins/cms/trunk@4480 0e7ba554-dfdc-446b-ac9a-b820edd20ad7

--- a/resources/public/stylesheets/cms/cms-stylesheet.css
+++ b/resources/public/stylesheets/cms/cms-stylesheet.css
@@ -791,6 +791,8 @@ li.pagination_link a {
 #file_tree {
   width:200px;
   padding:3px 10px;
+  overflow:auto;
+  height:380px;
 }
 
 #file_tree_files {
